Add java lang opens to secure jar handler.